# ml-prep-goap

./: AGENTS.md  README.md  pyproject.toml
constraints/: python3.13-linux-x86_64.txt
docs/reference/: plan-and-tasks.md  user-manual.md
src/goapml/: __init__.py  cli.py  engine.py  logging.py  models.py  paths.py  planner.py  schemas.py
src/goapml/actions/: __init__.py  evaluate.py  io.py  preprocess.py  registry.py  split.py  target.py  train.py
tests/: __init__.py  test_end_to_end.py
tests/data/: tiny_synthetic.csv
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_cli.py  test_engine.py  test_logging.py  test_planner.py  test_schemas.py
tests/unit/actions/: __init__.py  test_evaluate.py  test_io.py  test_io_detect_encoding.py  test_preprocess.py  test_registry.py  test_split.py  test_target.py  test_train.py
tests/unit/models/: __init__.py  test_pipeline_config.py  test_world_state.py
